--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
         <li class="navbar__menu__item active" data-link="#testimonials">
           Testimonial
         </li>
-        <li class="navbar__menu__item active" data-link="#contact">
-          Contact
-        </li>
+        <li class="navbar__menu__item active" data-link="#contact">Contact</li>
       </ul>
       <!-- </div> -->
       <!-- Toggle button -->
@@ -85,7 +83,7 @@
           <div class="major__description">
             HTML, CSS, JavaScript, TypeScript,
             <br />
-            React, jQuery, Node.js
+            React, Node.js
           </div>
         </div>
 
@@ -94,9 +92,7 @@
             <i class="fas fa-mobile"></i>
           </div>
           <h3 class="major__title">Mobile</h3>
-          <div class="major__description">
-            Android, Java
-          </div>
+          <div class="major__description">Android, Java, Flutter</div>
         </div>
 
         <div class="major">
@@ -104,9 +100,7 @@
             <i class="far fa-save"></i>
           </div>
           <h3 class="major__title">Data, ML</h3>
-          <div class="major__description">
-            Pandas, Pytorch, tensorflow
-          </div>
+          <div class="major__description">Pandas, Pytorch, tensorflow</div>
         </div>
       </div>
 
@@ -152,37 +146,37 @@
                 <span>90%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 90%;"></div>
+                <div class="skill__value" style="width: 90%"></div>
               </div>
             </div>
 
             <div class="skill">
               <div class="skill__description">
                 <span>CSS</span>
-                <span>80%</span>
+                <span>90%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 80%;"></div>
+                <div class="skill__value" style="width: 80%"></div>
               </div>
             </div>
 
             <div class="skill">
               <div class="skill__description">
                 <span>JavaScript</span>
-                <span>70%</span>
+                <span>80%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 70%;"></div>
+                <div class="skill__value" style="width: 70%"></div>
               </div>
             </div>
 
             <div class="skill">
               <div class="skill__description">
                 <span>React</span>
-                <span>30%</span>
+                <span>50%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 30%;"></div>
+                <div class="skill__value" style="width: 30%"></div>
               </div>
             </div>
 
@@ -192,7 +186,7 @@
                 <span>50%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 50%;"></div>
+                <div class="skill__value" style="width: 50%"></div>
               </div>
             </div>
 
@@ -202,7 +196,7 @@
                 <span>90%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 90%;"></div>
+                <div class="skill__value" style="width: 90%"></div>
               </div>
             </div>
 
@@ -212,7 +206,7 @@
                 <span>60%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 60%;"></div>
+                <div class="skill__value" style="width: 60%"></div>
               </div>
             </div>
           </div>
@@ -234,6 +228,7 @@
                 <li><span>Git</span></li>
                 <li><span>Scrum</span></li>
                 <li><span>Math</span></li>
+                <li><span>Figma</span></li>
               </ul>
             </div>
           </div>
@@ -279,6 +274,23 @@
             <div class="project__description">
               <h4>momentum</h4>
               <span>Clone coding momentum using HTML, CSS, JavaScript </span>
+            </div>
+          </a>
+
+          <a
+            href="https://github.com/jun7867/JavaScript_Game/tree/master/carrot-bug-game"
+            class="project"
+            target="blank"
+            data-type="web"
+          >
+            <img
+              class="project__img"
+              src="imgs/projects/carrot_bug.png"
+              alt="carrot"
+            />
+            <div class="project__description">
+              <h4>Carrot Bug Game</h4>
+              <span>Carrot Bug Game using HTML, CSS, JavaScript </span>
             </div>
           </a>
 
