update web projects

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <meta name="author" content="Jun" />
     <link rel="icon" type="image/png" href="./imgs/favicon.png" />
     <script
-      src="https://kit.fontawesome.com/5693e7640a.js"
+      src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"
       crossorigin="anonymous"
     ></script>
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
@@ -243,11 +245,11 @@
         <h3>Projects</h3>
         <div class="work__categories">
           <button class="category__btn selected" data-filter="*">
-            All<span class="category__count-all"> 4</span>
+            All<span class="category__count-all"> 7</span>
           </button>
           <button class="category__btn" data-filter="web">
             Web
-            <span class="category__count"> 2</span>
+            <span class="category__count"> 5</span>
           </button>
           <button class="category__btn" data-filter="app">
             App
@@ -260,6 +262,41 @@
         </div>
 
         <div class="work__projects">
+          <a
+            href="https://github.com/jun7867/React-Youtube-Clone"
+            class="project"
+            target="blank"
+            data-type="web"
+          >
+            <img
+              class="project__img"
+              src="imgs/projects/youtubeNo.png"
+              alt="youtube"
+            />
+            <div class="project__description">
+              <h4>Youtube</h4>
+              <span>Clone coding youtube using React, PostCSS, youtube API </span>
+            </div>
+          </a>
+
+          <a
+            href="https://github.com/jun7867/movie_app"
+            class="project"
+            target="blank"
+            data-type="web"
+          >
+            <img
+              class="project__img"
+              src="imgs/projects/movie.png"
+              alt="movie_app"
+            />
+            <div class="project__description">
+              <h4>movie_app</h4>
+              <span>movie web using React, API </span>
+            </div>
+          </a>
+
+
           <a
             href="https://github.com/jun7867/momentum_JS"
             class="project"
