--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         />
         <h2 class="home__title">Hello, <br />I'm Jun!</h2>
         <h3 class="home__description">
-          Developers who can data process, applications, web front-end and
-          back-end.
+          Front-end developer with experience in App, AI, Data Processing, Back End
         </h3>
       </div>
       <button class="home__contact">Contact Me</button>
@@ -111,7 +110,7 @@
           <img src="./imgs/Jobs/INI.png" alt="INI" class="job__logo" , />
           <div class="job__description">
             <p class="job__name">
-              Data Process, Web Developer in INI Solution.
+              Data Process, Web Developer in INI Solution. (Field training for university students)
             </p>
             <p class="job__period">2020.06~2020.08</p>
           </div>
@@ -276,6 +275,23 @@
             <div class="project__description">
               <h4>Youtube</h4>
               <span>Clone coding youtube using React, PostCSS, youtube API </span>
+            </div>
+          </a>
+
+          <a
+            href="https://www.inisolution.io/"
+            class="project"
+            target="blank"
+            data-type="web"
+          >
+            <img
+              class="project__img"
+              src="imgs/projects/ini.png"
+              alt="School-linked field practice"
+            />
+            <div class="project__description">
+              <h4>Field training for university students</h4>
+              <span>Field training for university students Web using React </span>
             </div>
           </a>
 
