--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       <!-- <div class="navbar__menu"> -->
       <ul class="navbar__menu">
         <li class="navbar__menu__item active" data-link="#home">Home</li>
-        <li class="navbar__menu__item active" data-link="#about">About</li>
-        <li class="navbar__menu__item active" data-link="#skills">Skills</li>
-        <li class="navbar__menu__item active" data-link="#work">My work</li>
-        <!-- <li class="navbar__menu__item active">Side Project</li> -->
-        <li class="navbar__menu__item active" data-link="#testimonials">
+        <li class="navbar__menu__item" data-link="#about">About</li>
+        <li class="navbar__menu__item" data-link="#skills">Skills</li>
+        <li class="navbar__menu__item" data-link="#work">My work</li>
+        <!-- <li class="navbar__menu__item" data-link=''>Side Project</li> -->
+        <!-- <li class="navbar__menu__item" data-link="#testimonials">
           Testimonial
-        </li>
-        <li class="navbar__menu__item active" data-link="#contact">Contact</li>
+        </li> -->
+        <li class="navbar__menu__item" data-link="#contact">Contact</li>
       </ul>
       <!-- </div> -->
       <!-- Toggle button -->
