--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </section>
 
-    <!-- Skills -->
+    <!-- Skills
     <section id="skills" class="section">
       <div class="section__container">
         <h2>Skills</h2>
@@ -235,7 +235,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Work -->
     <section id="work" class="section">
